// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContactsPage Snapshot Tests > matches snapshot for contacts list 1`] = `
<div>
  <div
    class="container py-3 py-md-4"
    data-qa="contacts-page"
    style="padding-bottom: 60px;"
  >
    <div
      class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-3 mb-md-4 gap-2"
    >
      <h1
        class="h2 mb-0"
        data-qa="contacts-title"
      >
        Contacts
      </h1>
      <a
        href="/contacts/new"
      >
        <button
          class="btn btn-primary  w-100 w-md-auto"
          data-qa="contacts-new-button"
        >
          Add
        </button>
      </a>
    </div>
    <div
      class="card shadow-sm mb-3 mb-md-4"
      data-qa="contacts-filters"
    >
      <div
        class="card-body"
      >
        <div
          class="row g-2"
        >
          <div
            class="col-12 col-md-3"
          >
            <label
              class="form-label small"
            >
              Company ID
            </label>
            <input
              class="form-control form-control-sm"
              data-qa="contacts-filter-company-id"
              placeholder="Filter by company ID"
              type="number"
              value=""
            />
          </div>
          <div
            class="col-12 col-md-3"
          >
            <label
              class="form-label small"
            >
              Application ID
            </label>
            <input
              class="form-control form-control-sm"
              data-qa="contacts-filter-application-id"
              placeholder="Filter by application ID"
              type="number"
              value=""
            />
          </div>
          <div
            class="col-12 col-md-3"
          >
            <label
              class="form-label small"
            >
              Client ID
            </label>
            <input
              class="form-control form-control-sm"
              data-qa="contacts-filter-client-id"
              placeholder="Filter by client ID"
              type="number"
              value=""
            />
          </div>
          <div
            class="col-12 col-md-3"
          >
            <label
              class="form-label small"
            >
              Contact Type
            </label>
            <input
              class="form-control form-control-sm"
              data-qa="contacts-filter-contact-type"
              placeholder="Filter by contact type"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="card shadow-sm"
      data-qa="contacts-list-card"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-hover mb-0"
          data-qa="contacts-table"
        >
          <thead
            class="table-light"
          >
            <tr>
              <th>
                Name
              </th>
              <th
                class="d-none d-md-table-cell"
              >
                Title
              </th>
              <th>
                Type
              </th>
              <th
                class="d-none d-lg-table-cell"
              >
                Company
              </th>
              <th>
                Actions
              </th>
            </tr>
          </thead>
          <tbody
            data-qa="contacts-table-body"
          >
            <tr
              data-qa="contact-row-1"
            >
              <td>
                <a
                  class="text-decoration-none fw-medium"
                  data-qa="contact-name-link-1"
                  href="/contacts/1"
                >
                  John Doe
                </a>
                <div
                  class="d-md-none mt-1"
                >
                  <small
                    class="text-muted"
                  >
                    Senior Recruiter
                  </small>
                </div>
              </td>
              <td
                class="d-none d-md-table-cell"
                data-qa="contact-title-1"
              >
                Senior Recruiter
              </td>
              <td>
                <span
                  class="badge bg-info"
                  data-qa="contact-type-1"
                >
                  Recruiter
                </span>
              </td>
              <td
                class="d-none d-lg-table-cell"
                data-qa="contact-company-1"
              >
                1
              </td>
              <td>
                <div
                  class="d-flex gap-1 gap-md-2"
                >
                  <a
                    class="btn btn-sm btn-outline-primary"
                    data-qa="contact-edit-button-1"
                    href="/contacts/1/edit"
                  >
                    Edit
                  </a>
                  <button
                    class="btn btn-sm btn-outline-danger"
                    data-qa="contact-delete-button-1"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
            <tr
              data-qa="contact-row-2"
            >
              <td>
                <a
                  class="text-decoration-none fw-medium"
                  data-qa="contact-name-link-2"
                  href="/contacts/2"
                >
                  Jane Smith
                </a>
                <div
                  class="d-md-none mt-1"
                >
                  <small
                    class="text-muted"
                  >
                    Hiring Manager
                  </small>
                </div>
              </td>
              <td
                class="d-none d-md-table-cell"
                data-qa="contact-title-2"
              >
                Hiring Manager
              </td>
              <td>
                <span
                  class="badge bg-info"
                  data-qa="contact-type-2"
                >
                  Manager
                </span>
              </td>
              <td
                class="d-none d-lg-table-cell"
                data-qa="contact-company-2"
              >
                2
              </td>
              <td>
                <div
                  class="d-flex gap-1 gap-md-2"
                >
                  <a
                    class="btn btn-sm btn-outline-primary"
                    data-qa="contact-edit-button-2"
                    href="/contacts/2/edit"
                  >
                    Edit
                  </a>
                  <button
                    class="btn btn-sm btn-outline-danger"
                    data-qa="contact-delete-button-2"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="bg-light border-top py-2 px-3 "
      data-qa="status-bar"
      style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 1000;"
    >
      <div
        class="container-fluid"
      >
        <div
          class="d-flex justify-content-between align-items-center"
        >
          <small
            class="text-muted"
            data-qa="status-bar-message"
          >
            Ready
          </small>
          <small
            class="text-muted"
            data-qa="status-bar-timestamp"
          >
            2:35:03 PM
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContactsPage Snapshot Tests > matches snapshot for empty state 1`] = `
<div>
  <div
    class="container py-3 py-md-4"
    data-qa="contacts-page"
    style="padding-bottom: 60px;"
  >
    <div
      class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-3 mb-md-4 gap-2"
    >
      <h1
        class="h2 mb-0"
        data-qa="contacts-title"
      >
        Contacts
      </h1>
      <a
        href="/contacts/new"
      >
        <button
          class="btn btn-primary  w-100 w-md-auto"
          data-qa="contacts-new-button"
        >
          Add
        </button>
      </a>
    </div>
    <div
      class="card shadow-sm mb-3 mb-md-4"
      data-qa="contacts-filters"
    >
      <div
        class="card-body"
      >
        <div
          class="row g-2"
        >
          <div
            class="col-12 col-md-3"
          >
            <label
              class="form-label small"
            >
              Company ID
            </label>
            <input
              class="form-control form-control-sm"
              data-qa="contacts-filter-company-id"
              placeholder="Filter by company ID"
              type="number"
              value=""
            />
          </div>
          <div
            class="col-12 col-md-3"
          >
            <label
              class="form-label small"
            >
              Application ID
            </label>
            <input
              class="form-control form-control-sm"
              data-qa="contacts-filter-application-id"
              placeholder="Filter by application ID"
              type="number"
              value=""
            />
          </div>
          <div
            class="col-12 col-md-3"
          >
            <label
              class="form-label small"
            >
              Client ID
            </label>
            <input
              class="form-control form-control-sm"
              data-qa="contacts-filter-client-id"
              placeholder="Filter by client ID"
              type="number"
              value=""
            />
          </div>
          <div
            class="col-12 col-md-3"
          >
            <label
              class="form-label small"
            >
              Contact Type
            </label>
            <input
              class="form-control form-control-sm"
              data-qa="contacts-filter-contact-type"
              placeholder="Filter by contact type"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="card shadow-sm text-center py-5"
    >
      <div
        class="card-body"
      >
        <p
          class="text-muted mb-4"
          data-qa="contacts-empty-state"
        >
          No contacts found.
        </p>
      </div>
    </div>
    <div
      class="bg-light border-top py-2 px-3 "
      data-qa="status-bar"
      style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 1000;"
    >
      <div
        class="container-fluid"
      >
        <div
          class="d-flex justify-content-between align-items-center"
        >
          <small
            class="text-muted"
            data-qa="status-bar-message"
          >
            Ready
          </small>
          <small
            class="text-muted"
            data-qa="status-bar-timestamp"
          >
            2:35:03 PM
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContactsPage Snapshot Tests > matches snapshot for loading state 1`] = `
<div>
  <div
    class="d-flex flex-column align-items-center justify-content-center p-5"
    data-qa="loading"
  >
    <div
      class="spinner-border text-primary mb-3"
      data-qa="loading-spinner"
      role="status"
    >
      <span
        class="visually-hidden"
      >
        Loading...
      </span>
    </div>
    <p
      class="text-muted"
      data-qa="loading-message"
    >
      Loading contacts...
    </p>
  </div>
</div>
`;
